tests/type_param_bounds/type_param_bounds.exp
Error ---------------------------------------------------------------------------------------- type_param_bounds.js:4:10

Cannot instantiate `X` because string [1] is incompatible with number [2] in type argument `T`. [incompatible-type-arg]

   type_param_bounds.js:4:10
   4| (true: X<string>);
               ^^^^^^ [1]

References:
   type_param_bounds.js:3:11
   3| type X<T: number> = bool;
                ^^^^^^ [2]



Found 1 error
